Changed font, Added underlines to headings.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
     background-color: gainsboro;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+    text-decoration: underline;
+}
+
+h3 { 
+    text-decoration: underline;
 }
